force-app/main/default/objects/Product2/fields/AC_to_DC_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>AC_to_DC_Efficiency__c</fullName>
    <defaultValue>96</defaultValue>
    <description>Battery&apos;s AC to DC efficiency</description>
    <inlineHelpText>Battery&apos;s AC to DC efficiency</inlineHelpText>
    <label>AC to DC Efficiency</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>