force-app/main/default/objects/Product2/fields/Allow_Battery_to_Grid__c.field-meta.xml
<CustomField>
    <fullName>Allow_Battery_to_Grid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permit battery to export energy to the grid</description>
    <inlineHelpText>Permit battery to export energy to the grid</inlineHelpText>
    <label>Allow Battery to Grid?</label>
    <type>Checkbox</type>
</CustomField>