force-app/main/default/objects/Product2/fields/Allow_Grid_to_Battery__c.field-meta.xml
<CustomField>
    <fullName>Allow_Grid_to_Battery__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow charging the battery from the grid</description>
    <inlineHelpText>Allow charging the battery from the grid</inlineHelpText>
    <label>Allow Grid to Battery?</label>
    <type>Checkbox</type>
</CustomField>