force-app/main/default/objects/Product2/fields/Allow_Solar_to_Battery__c.field-meta.xml
<CustomField>
    <fullName>Allow_Solar_to_Battery__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow solar generation to charge the battery</description>
    <inlineHelpText>Allow solar generation to charge the battery</inlineHelpText>
    <label>Allow Solar to Battery</label>
    <type>Checkbox</type>
</CustomField>