force-app/main/default/objects/Product2/fields/Allow_Solar_to_Grid__c.field-meta.xml
<CustomField>
    <fullName>Allow_Solar_to_Grid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permit solar generation to export excess to the grid</description>
    <inlineHelpText>Permit solar generation to export excess to the grid</inlineHelpText>
    <label>Allow Solar to Grid</label>
    <type>Checkbox</type>
</CustomField>