force-app/main/default/objects/Product2/fields/Battery_Size__c.field-meta.xml
<CustomField>
    <fullName>Battery_Size__c</fullName>
    <label>Battery Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>