force-app/main/default/objects/Product2/fields/Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis__c</fullName>
    <inlineHelpText>How is the cost for the adder calculated in the design portal? Add-on = included as an &quot;Adder&quot; with an additional cost in the portal. Adjust Base PPW = additional cost calculated into increased Base PPW of the system.</inlineHelpText>
    <label>Cost Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Adjust Base PPW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>