force-app/main/default/objects/Product2/fields/DC_Coupled__c.field-meta.xml
<CustomField>
    <fullName>DC_Coupled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the battery DC Coupled?</description>
    <inlineHelpText>Is the battery DC Coupled?</inlineHelpText>
    <label>DC Coupled?</label>
    <type>Checkbox</type>
</CustomField>