force-app/main/default/objects/Product2/fields/DC_to_AC_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>DC_to_AC_Efficiency__c</fullName>
    <defaultValue>96</defaultValue>
    <description>Battery&apos;s DC to AC efficiency</description>
    <inlineHelpText>Battery&apos;s DC to AC efficiency</inlineHelpText>
    <label>DC to AC Efficiency</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>