force-app/main/default/objects/Product2/fields/Degredation_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>Degredation_1st_Year__c</fullName>
    <inlineHelpText>First year degredation of the product</inlineHelpText>
    <label>Degredation (1st Year)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>