force-app/main/default/objects/Product2/fields/Degredation_annual__c.field-meta.xml
<CustomField>
    <fullName>Degredation_annual__c</fullName>
    <inlineHelpText>Annual degredation of the product</inlineHelpText>
    <label>Degredation (annual)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>