force-app/main/default/objects/Product2/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <inlineHelpText>Depth (in meters)</inlineHelpText>
    <label>Depth</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>