force-app/main/default/objects/Product2/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <label>Efficiency</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>