force-app/main/default/objects/Product2/fields/Energy_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Energy_Capacity__c</fullName>
    <label>Energy Capacity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>