force-app/main/default/objects/Product2/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Height (in meters)</inlineHelpText>
    <label>Height</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>