force-app/main/default/objects/Product2/fields/Initial_SoC__c.field-meta.xml
<CustomField>
    <fullName>Initial_SoC__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Battery initial state of charge</description>
    <inlineHelpText>Battery initial state of charge</inlineHelpText>
    <label>Initial SoC</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>