force-app/main/default/objects/Product2/fields/Input_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Input_Efficiency__c</fullName>
    <defaultValue>97.5</defaultValue>
    <description>Internal battery charge acceptance</description>
    <inlineHelpText>Internal battery charge acceptance</inlineHelpText>
    <label>Input Efficiency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>