force-app/main/default/objects/Product2/fields/Learn_More__c.field-meta.xml
<CustomField>
    <fullName>Learn_More__c</fullName>
    <inlineHelpText>Customer-facing description. Note, content typed here may be available on externally facing websites like the Quoting page.</inlineHelpText>
    <label>Learn More</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>