force-app/main/default/objects/Product2/fields/Made_In__c.field-meta.xml
<CustomField>
    <fullName>Made_In__c</fullName>
    <label>Made In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>