force-app/main/default/objects/Product2/fields/Max_SoC__c.field-meta.xml
<CustomField>
    <fullName>Max_SoC__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Battery maximum state of charge</description>
    <inlineHelpText>Battery maximum state of charge</inlineHelpText>
    <label>Max SoC</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>