force-app/main/default/objects/Product2/fields/Min_SoC__c.field-meta.xml
<CustomField>
    <fullName>Min_SoC__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Battery Minimum State of Charge</description>
    <inlineHelpText>Battery Minimum State of Charge</inlineHelpText>
    <label>Min SoC</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>