force-app/main/default/objects/Product2/fields/Module_Power__c.field-meta.xml
<CustomField>
    <fullName>Module_Power__c</fullName>
    <label>Module Power</label>
    <length>20</length>
    <type>Text</type>
</CustomField>