force-app/main/default/objects/Product2/fields/Panel_Size__c.field-meta.xml
<CustomField>
    <fullName>Panel_Size__c</fullName>
    <label>Panel Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>