force-app/main/default/objects/Product2/fields/Power_Output__c.field-meta.xml
<CustomField>
    <fullName>Power_Output__c</fullName>
    <label>Power Output</label>
    <length>20</length>
    <type>Text</type>
</CustomField>