force-app/main/default/objects/Product2/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <description>Image of the product as referenced by Product_Image_URL__c</description>
    <formula>IF(
    ISBLANK(Product_Image_URL__c), 
    &quot;&quot;, 
    IMAGE( &apos;/resource/&apos; + Product_Image_URL__c ,  Name ,400,400)
)</formula>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>