force-app/main/default/objects/Product2/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>