force-app/main/default/objects/Product2/fields/Rated_Output_Power__c.field-meta.xml
<CustomField>
    <fullName>Rated_Output_Power__c</fullName>
    <label>Rated Output Power</label>
    <length>20</length>
    <type>Text</type>
</CustomField>