force-app/main/default/objects/Product2/fields/Selectable_Item__c.field-meta.xml
<CustomField>
    <fullName>Selectable_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can the customer manual choose to include this product/adder?</description>
    <inlineHelpText>Can the customer manual choose to include this product/adder?</inlineHelpText>
    <label>Selectable Item</label>
    <type>Checkbox</type>
</CustomField>