force-app/main/default/objects/Product2/fields/Solar_DC_to_AC_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Solar_DC_to_AC_Efficiency__c</fullName>
    <defaultValue>96</defaultValue>
    <description>Efficiency when charging from solar</description>
    <inlineHelpText>Efficiency when charging from solar</inlineHelpText>
    <label>Solar DC to AC Efficiency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>