force-app/main/default/objects/Product2/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <inlineHelpText>Warranty term/panel life (in years)</inlineHelpText>
    <label>Warranty</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>