force-app/main/default/objects/Product2/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>Width (in meters)</inlineHelpText>
    <label>Width</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>