force-app/main/default/objects/Product2/recordTypes/Adder.recordType-meta.xml
<RecordType>
    <fullName>Adder</fullName>
    <active>true</active>
    <label>Adder</label>
</RecordType>