force-app/main/default/objects/Product2/recordTypes/Battery.recordType-meta.xml
<RecordType>
    <fullName>Battery</fullName>
    <active>true</active>
    <label>Battery</label>
</RecordType>