force-app/main/default/objects/Product2/recordTypes/Inverter.recordType-meta.xml
<RecordType>
    <fullName>Inverter</fullName>
    <active>true</active>
    <label>Inverter</label>
</RecordType>